@@ -1,3 +1,9 @@
+2015-10-27  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* 36974: Src/Modules/zftp.c, Src/Zle/complist.c,
+	Src/Zle/computil.c, Src/Zle/zle_thingy.c, Src/parse.c: fix empty
+	argument lists.
+
 2015-10-26  Barton E. Schaefer  <schaefer@zsh.org>
 
 	* 36906: Kamil Dudka <kdudka@redhat.com>: Src/mem.c:
